--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /CurrentTime/build/
 /dalyincame/nbproject/private/
 /dalyincame/build/
+/switchcase/nbproject/private/
+/switchcase/build/
+/leapyersruel/nbproject/private/
+/leapyersruel/build/
+/mathmathord/nbproject/private/
+/mathmathord/build/
