--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /leapyersruel/build/
 /mathmathord/nbproject/private/
 /mathmathord/build/
+/string/nbproject/private/
+/testSting/nbproject/private/
+/testSting/build/
