--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /string/nbproject/private/
 /testSting/nbproject/private/
 /testSting/build/
+/name/nbproject/private/
+/name/build/
+/testmathod/nbproject/private/
+/testmathod/build/
