--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 /name/build/
 /testmathod/nbproject/private/
 /testmathod/build/
+/chaptar4/nbproject/private/
+/chaptar4/build/
+/numberGuessing/nbproject/private/
+/numberGuessing/build/
+/testguessingDowhile/nbproject/private/
+/testguessingDowhile/build/
