--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,17 @@
 /nameWelcome/target/
 /vowelConsonant/nbproject/private/
 /vowelConsonant/build/
+/number14/nbproject/private/
+/number14/build/
+/teliphoneshow/nbproject/private/
+/teliphoneshow/build/
+/daysofmonth/nbproject/private/
+/daysofmonth/build/
+/number/nbproject/private/
+/number/build/
+/addsum/nbproject/private/
+/addsum/build/
+/unicordAscii/nbproject/private/
+/unicordAscii/build/
+/numberToChar/nbproject/private/
+/numberToChar/build/
