--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@
 /factoryal/build/
 /primeNumber/nbproject/private/
 /primeNumber/build/
+/testloops59/nbproject/private/
+/testLoop/nbproject/private/
+/testLoop/build/
+/mathodclass/nbproject/private/
+/mathodclass/build/
+/mathorprime/nbproject/private/
+/mathorprime/build/
