--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /mathodclass/build/
 /mathorprime/nbproject/private/
 /mathorprime/build/
+/rnadmPaswordGenaret/nbproject/private/
+/rnadmPaswordGenaret/build/
