--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@
 /unicordAscii/build/
 /numberToChar/nbproject/private/
 /numberToChar/build/
+/TestWhileloop/nbproject/private/
+/TestWhileloop/build/
+/SingleDimensionarray/nbproject/private/
+/SingleDimensionarray/build/
+/isPrime/nbproject/private/
+/isPrime/build/
