--- a/SingleDimensionarray/nbproject/project.properties
+++ b/SingleDimensionarray/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/testSting.jar
+dist.jar=${dist.dir}/SingleDimensionarray.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/testSting
+dist.jlink.output=${dist.jlink.dir}/SingleDimensionarray
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=testSting
-main.class=teststing.TestSting
+jlink.launcher.name=SingleDimensionarray
+main.class=singledimensionarray.SingleDimensionarray
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
