--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /mathorprime/build/
 /rnadmPaswordGenaret/nbproject/private/
 /rnadmPaswordGenaret/build/
+/testmathrodPrimeNumber/nbproject/private/
+/testmathrodPrimeNumber/build/
