--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /rnadmPaswordGenaret/build/
 /testmathrodPrimeNumber/nbproject/private/
 /testmathrodPrimeNumber/build/
+/testMultidimensionArrays/nbproject/private/
+/testMultidimensionArrays/build/
