--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@
 /testmathrodPrimeNumber/build/
 /testMultidimensionArrays/nbproject/private/
 /testMultidimensionArrays/build/
+/chaptar9ClassObject/nbproject/private/
+/JavaApplication28/nbproject/private/
+/premnumber/nbproject/private/
+/premnumber/build/
+/numberMaxMin/nbproject/private/
+/numberMaxMin/build/
