--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,19 @@
 /testclassObject/build/
 /MaxMinNumber/nbproject/private/
 /MaxMinNumber/build/
+/classObjectprime/nbproject/private/
+/classObjectprime/build/
+/JavaApplication38/nbproject/private/
+/allWork/nbproject/private/
+/JavaApplication40/nbproject/private/
+/JavaApplication41/nbproject/private/
+/alltest/nbproject/private/
+/alltest/build/
+/conversionPrimitive/nbproject/private/
+/conversionPrimitive/build/
+/inheritanceChaptar11/nbproject/private/
+/inheritanceChaptar11/build/
+/students/nbproject/private/
+/students/build/
+/polymorphism/nbproject/private/
+/polymorphism/build/
