--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 /testObject/nbproject/private/
 /testObject/build/
 /swichcas/build/
+/regstation/nbproject/private/
+/testcreate/nbproject/private/
+/testcreate/build/
+/prodect/nbproject/private/
+/create/nbproject/private/
+/create/build/
+/prictis/nbproject/private/
+/prictis/build/
