--- a/testcreate/nbproject/project.properties
+++ b/testcreate/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/swichcas.jar
+dist.jar=${dist.dir}/testcreate.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/swichcas
+dist.jlink.output=${dist.jlink.dir}/testcreate
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=swichcas
-main.class=swichcas.Swichcas
+jlink.launcher.name=testcreate
+main.class=testcreate.turck
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
