--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 /exceptionHandling/nbproject/private/
 /exceptionHandling/build/
+/funtion/nbproject/private/
+/funtion/build/
+/testRadiusMathe/nbproject/private/
+/testRadiusMathe/build/
+/avaregSum/nbproject/private/
+/avaregSum/build/
+/avidence/nbproject/private/
+/avidence/build/
+/supar_keyword/nbproject/private/
+/supar_keyword/build/
+/employees/nbproject/private/
+/employees/build/
