--- a/avidence/nbproject/project.properties
+++ b/avidence/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/avidence.jar
+dist.jar=${dist.dir}/avidence1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/avidence
+dist.jlink.output=${dist.jlink.dir}/avidence1
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=avidence
+jlink.launcher.name=avidence1
 main.class=avidence.Avidence
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
