--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /Recursion CP17/recursion/build/
 /Recursion Chaptar17/recursion/build/
 /Recursion Chaptar17/recursion/nbproject/private/
+/BINARY IO Chaptar17/filleInput/nbproject/private/
+/BINARY IO Chaptar17/filleInput/build/
+/BINARY IO Chaptar17/binaryFile/testBinary/nbproject/private/
+/BINARY IO Chaptar17/binaryFile/testBinary/build/
