--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /BINARY IO Chaptar17/filleInput/build/
 /BINARY IO Chaptar17/binaryFile/testBinary/nbproject/private/
 /BINARY IO Chaptar17/binaryFile/testBinary/build/
+/BINARY IO Chaptar17/binaryFile/JavaApplication64/nbproject/private/
+/BINARY IO Chaptar17/binaryFile/JavaApplication64/build/
+/BINARY IO Chaptar17/prictice1/nbproject/private/
+/BINARY IO Chaptar17/prictice1/build/
