--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 /BINARY IO Chaptar17/binaryFile/JavaApplication64/build/
 /BINARY IO Chaptar17/prictice1/nbproject/private/
 /BINARY IO Chaptar17/prictice1/build/
+/Generics ArrayList-19/generics/nbproject/private/
+/Generics ArrayList-19/generics/build/
+/Generics ArrayList-19/testgenetic/nbproject/private/
+/Generics ArrayList-19/testgenetic/build/
+/Generics ArrayList-19/testArrayMathod/nbproject/private/
+/Generics ArrayList-19/testArrayMathod/build/
