--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /Generics ArrayList-19/testgenetic/build/
 /Generics ArrayList-19/testArrayMathod/nbproject/private/
 /Generics ArrayList-19/testArrayMathod/build/
+/Generics ArrayList-19/teacher/nbproject/private/
+/Generics ArrayList-19/teacher/build/
