--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 /Generics ArrayList-19/testArrayMathod/build/
 /Generics ArrayList-19/teacher/nbproject/private/
 /Generics ArrayList-19/teacher/build/
+/Generics ArrayList-19/testList/nbproject/private/
+/Generics ArrayList-19/testLists/nbproject/private/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testLists/nbproject/private/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testLists/build/
