--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /Generics ArrayList-19/testLists/nbproject/private/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLists/nbproject/private/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLists/build/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testLinkedList/nbproject/private/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testLinkedList/build/
