--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLists/build/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLinkedList/nbproject/private/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLinkedList/build/
+/Lists, Stacks, Queues, and Priority QueuesCh20/treeHashSet/nbproject/private/
+/Lists, Stacks, Queues, and Priority QueuesCh20/treeHashSet/build/
