--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Lists, Stacks, Queues, and Priority QueuesCh20/testLinkedList/build/
 /Lists, Stacks, Queues, and Priority QueuesCh20/treeHashSet/nbproject/private/
 /Lists, Stacks, Queues, and Priority QueuesCh20/treeHashSet/build/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testMap/nbproject/private/
+/Lists, Stacks, Queues, and Priority QueuesCh20/testMap/build/
