--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /Lists, Stacks, Queues, and Priority QueuesCh20/treeHashSet/build/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testMap/nbproject/private/
 /Lists, Stacks, Queues, and Priority QueuesCh20/testMap/build/
+/Abstaclass/arithmetic/nbproject/private/
+/Abstaclass/arithmetic/build/
