--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@
 /Sorting Chaptar-23/Asending t/build/
 /Sorting Chaptar-23/Random Ascending/nbproject/private/
 /Sorting Chaptar-23/Random Ascending/build/
+/searching/nbproject/private/
+/searching/build/
+/testAvidens/nbproject/private/
+/testAvidens/build/
