--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,13 @@
 /searching/build/
 /testAvidens/nbproject/private/
 /testAvidens/build/
+/abstract1/nbproject/private/
+/abstract1/build/
+/Chaptar-13 (Abstaclass)/abstract1/build/
+/Chaptar-13 (Abstaclass)/abstract1/nbproject/private/
+/Chaptar-13 (Abstaclass)/arithmetic/build/
+/Chaptar-13 (Abstaclass)/arithmetic/nbproject/private/
+/Chaptar-13 (Abstaclass)/testabstractclass/build/
+/Chaptar-13 (Abstaclass)/testabstractclass/nbproject/private/
+/Chaptar-11(inheritance)/JavaApplication87/nbproject/private/
+/Chaptar-11(inheritance)/JavaApplication87/build/
