--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@
 /Chaptar-13 (Abstaclass)/testabstractclass/nbproject/private/
 /Chaptar-11(inheritance)/JavaApplication87/nbproject/private/
 /Chaptar-11(inheritance)/JavaApplication87/build/
+/Chaptar-13 (Abstaclass)/testabstraction/nbproject/private/
+/Chaptar-13 (Abstaclass)/testabstraction/build/
