--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@
 /Chaptar-11(inheritance)/JavaApplication87/build/
 /Chaptar-13 (Abstaclass)/testabstraction/nbproject/private/
 /Chaptar-13 (Abstaclass)/testabstraction/build/
+/Chaptar-7( Single-Dimensional Arrays)/randomArrays/nbproject/private/
+/Chaptar-7( Single-Dimensional Arrays)/randomArrays/build/
