--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,15 @@
 /Chaptar-13 (Abstaclass)/testabstraction/build/
 /Chaptar-7( Single-Dimensional Arrays)/randomArrays/nbproject/private/
 /Chaptar-7( Single-Dimensional Arrays)/randomArrays/build/
+/Chaptar-17(BINARY IO)/avidence/nbproject/private/
+/Chaptar-17(BINARY IO)/avidence/build/
+/Chaptar-17(BINARY IO)/testBinaryFile/nbproject/private/
+/Chaptar-17(BINARY IO)/testBinaryFile/build/
+/Chaptar-17(BINARY IO)/avidensBinary/nbproject/private/
+/Chaptar-17(BINARY IO)/avidensBinary/build/
+/allWork/build/
+/Chaptar-17(BINARY IO)/testArrayRandom/nbproject/private/
+/Chaptar-24 Linked Lis ArrayList/testLinkList/nbproject/private/
+/Chaptar-24 Linked Lis ArrayList/testLinkList/build/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication95/nbproject/private/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication95/build/
