--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@
 /searching/build/
 /testAvidens/nbproject/private/
 /testAvidens/build/
+/thread/nbproject/private/
+/thread/build/
+/testgeneric/nbproject/private/
+/testgeneric/build/
+/  avidensbinary/nbproject/private/
+/  avidensbinary/build/
