--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,19 @@
 /Chaptar-24 Linked Lis ArrayList/testLinkList/build/
 /Chaptar-7( Single-Dimensional Arrays)/JavaApplication95/nbproject/private/
 /Chaptar-7( Single-Dimensional Arrays)/JavaApplication95/build/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication96/nbproject/private/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication96/build/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication96/dist/
+/Chaptar-7( Single-Dimensional Arrays)/JavaApplication95/dist/
+/Chaptar-13 (Abstaclass)/JavaApplication3/nbproject/private/
+/Chaptar-13 (Abstaclass)/animalwith/nbproject/private/
+/Chaptar-13 (Abstaclass)/animalwith/build/
+/Chaptar-5(Loops)/vowele/nbproject/private/
+/Chaptar-5(Loops)/vowele/build/
+/Chaptar-5(Loops)/testobject/nbproject/private/
+/Chaptar-5(Loops)/testobject/build/
+/TestRecurtion59/nbproject/private/
+/TestRecurtion/nbproject/private/
+/TestRecurtion/build/
+/Chaptar-18 Recursion/JavaApplication7/nbproject/private/
+/Chaptar-18 Recursion/JavaApplication7/build/
