--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,18 @@
 /Chaptar-13 (Abstaclass)/textabstraction a/nbproject/private/
 /Chaptar-13 (Abstaclass)/textabstraction a/dist/
 /Chaptar-13 (Abstaclass)/textabstraction a/build/
+/ISDB/recursion/nbproject/private/
+/ISDB/recursion/build/
+/ISDB/factarial/nbproject/private/
+/ISDB/factarial/build/
+/ISDB/Gnericse/nbproject/private/
+/ISDB/Gnericse/build/
+/ISDB/TextFile/nbproject/private/
+/ISDB/TextFile/build/
+/ISDB/JavaApplication21/nbproject/private/
+/ISDB/JavaApplication21/build/
+/ISDB/JavaApplication21/dist/
+/ISDB/Random/nbproject/private/
+/ISDB/Random/build/
+/ISDB/FileInput/nbproject/private/
+/ISDB/FileInput/build/
