--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,11 @@
 /JavaApplication10/nbproject/private/
 /JavaApplication10/build/
 /JavaApplication11/nbproject/private/
+/Chaptar-18 (Recursion)/FactarialRecation/build/
+/Chaptar-18 (Recursion)/FactarialRecation/nbproject/private/
+/Chaptar-18 (Recursion)/JavaApplication7/nbproject/private/
+/Chaptar-18 (Recursion)/RecursionFactarial/build/
+/Chaptar-18 (Recursion)/RecursionFactarial/nbproject/private/
+/Chaptar-18 (Recursion)/febonacciofmathod/nbproject/private/
+/Chaptar-18 (Recursion)/recursion/build/
+/Chaptar-18 (Recursion)/recursion/nbproject/private/
