--- a/3 number/nbproject/project.properties
+++ b/3 number/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/textabstraction.jar
+dist.jar=${dist.dir}/3_number.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/textabstraction
+dist.jlink.output=${dist.jlink.dir}/3_number
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=22
-javac.target=22
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=textabstraction
-main.class=textabstraction.Textabstraction
+jlink.launcher.name=3_number
+main.class=pkg3.number.Number
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
