--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,6 @@
 /Advance Java/XMLWriter/build/
 /Advance Java/XMLWriter/nbproject/private/
 /Advance Java/XMLWriter/dist/
+/Chaptar-4 (methods)/Marck/nbproject/private/
+/Chaptar-4 (methods)/Marck/build/
+/Chaptar-4 (methods)/Marck/dist/
