--- a/DATA  Connection/NotMySql/nbproject/project.properties
+++ b/DATA  Connection/NotMySql/nbproject/project.properties
@@ -28,22 +28,18 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DBconn.jar
+dist.jar=${dist.dir}/NotMySql.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DBconn
+dist.jlink.output=${dist.jlink.dir}/NotMySql
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=..\\SwingProject\\JEE59jav\\lib\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\Sanaullah\\Documents\\mysql-connector-j-8.4.0.jar
-file.reference.sql.jar=..\\SwingProject\\JEE59jav\\lib\\sql.jar
-file.reference.sql.jar-1=C:\\Users\\Sanaullah\\Documents\\sql.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Sanaullah\\Documents\\mysql-connector-j-8.4.0.jar
+file.reference.sql.jar=C:\\Users\\Sanaullah\\Documents\\sql.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.sql.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
-    ${file.reference.sql.jar-1}
+    ${file.reference.sql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DBconn
-main.class=dbconn.DBconn
+jlink.launcher.name=NotMySql
+main.class=notmysql.NotMySql
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
