--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,11 @@
 /DATA  Connection/DoNotMySql/nbproject/private/
 /DATA  Connection/DBconn/nbproject/private/
 /DATA  Connection/DBconn/build/
+/DATA  Connection/jdbceConnection/nbproject/private/
+/DATA  Connection/jdbceConnection/build/
+/DATA  Connection/jdbceConnection/dist/
+/DATA  Connection/DataUpdet/nbproject/private/
+/DATA  Connection/DataUpdet/build/
+/DATA  Connection/DataUpdet/dist/
+/DATA  Connection/UpdetData/nbproject/private/
+/DATA  Connection/UpdetData/build/
