--- a/DATA  Connection/DataUpdet/nbproject/project.properties
+++ b/DATA  Connection/DataUpdet/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/NotMySql.jar
+dist.jar=${dist.dir}/DataUpdet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/NotMySql
+dist.jlink.output=${dist.jlink.dir}/DataUpdet
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Sanaullah\\Documents\\mysql-connector-j-8.4.0.jar
 file.reference.sql.jar=C:\\Users\\Sanaullah\\Documents\\sql.jar
@@ -74,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=NotMySql
-main.class=notmysql.NotMySql
+jlink.launcher.name=DataUpdet
+main.class=dataupdet.DataUpdet
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
