--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,9 @@
 /DATA  Connection/DataUpdet/dist/
 /DATA  Connection/UpdetData/nbproject/private/
 /DATA  Connection/UpdetData/build/
+/Chaptar-3( if-else)/PositiveNegative/nbproject/private/
+/Chaptar-3( if-else)/PositiveNegative/build/
+/Chaptar-19(Generics ArrayList)/Arraye/nbproject/private/
+/Chaptar-19(Generics ArrayList)/Arraye/build/
+/Chaptar-19(Generics ArrayList)/ArraysSum/nbproject/private/
+/Chaptar-19(Generics ArrayList)/ArraysSum/build/
