--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,5 @@
 /Chaptar-19(Generics ArrayList)/Arraye/build/
 /Chaptar-19(Generics ArrayList)/ArraysSum/nbproject/private/
 /Chaptar-19(Generics ArrayList)/ArraysSum/build/
+/Chaptar-19(Generics ArrayList)/Bank/nbproject/private/
+/Chaptar-19(Generics ArrayList)/Bank/build/
