--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,11 @@
 /Chaptar-19(Generics ArrayList)/ArraysSum/build/
 /Chaptar-19(Generics ArrayList)/Bank/nbproject/private/
 /Chaptar-19(Generics ArrayList)/Bank/build/
+/Chaptar-19(Generics ArrayList)/claculetar/nbproject/private/
+/Chaptar-19(Generics ArrayList)/claculetar/build/
+/Chaptar-5(Loops)/OddNumberSum/nbproject/private/
+/Chaptar-5(Loops)/OddNumberSum/build/
+/Chaptar-5(Loops)/Palindrome/nbproject/private/
+/Chaptar-5(Loops)/Palindrome/build/
+/Chaptar-5(Loops)/claculetar/build/
+/Chaptar-5(Loops)/claculetar/nbproject/private/
