--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,5 @@
 /Chaptar-5(Loops)/Palindrome/build/
 /Chaptar-5(Loops)/claculetar/build/
 /Chaptar-5(Loops)/claculetar/nbproject/private/
+/JDBC2/nbproject/private/
+/JDBC2/build/
