--- a/JDBC2/nbproject/project.properties
+++ b/JDBC2/nbproject/project.properties
@@ -28,15 +28,18 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Bank.jar
+dist.jar=${dist.dir}/JDBC2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Bank
+dist.jlink.output=${dist.jlink.dir}/JDBC2
 excludes=
+file.reference.mysql-connector-j-8.4.0.jar=F:\\programming\\GIT\\Swing\\SwingProject\\JEE59jav\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.sql.jar=F:\\programming\\GIT\\Swing\\SwingProject\\JEE59jav\\lib\\sql.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.sql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Bank
-main.class=bank.Bank
+jlink.launcher.name=JDBC2
+main.class=jdbc2.JDBC2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
