--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@
 /Chaptar-5(Loops)/claculetar/nbproject/private/
 /JDBC2/nbproject/private/
 /JDBC2/build/
+/JavaApplication36/nbproject/private/
+/JavaApplication36/build/
