--- a/DATA  Connection/JDBC3/nbproject/project.properties
+++ b/DATA  Connection/JDBC3/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JDBC3
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Sanaullah\\Documents\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar-1=F:\\programming\\GIT\\Swing\\SwingProject\\JEE59jav\\lib\\mysql-connector-j-8.4.0.jar
 file.reference.sql.jar=C:\\Users\\Sanaullah\\Documents\\sql.jar
+file.reference.sql.jar-1=F:\\programming\\GIT\\Swing\\SwingProject\\JEE59jav\\lib\\sql.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.sql.jar}
+    ${file.reference.sql.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
+    ${file.reference.sql.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
