--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,14 @@
 /JDBC2/build/
 /JavaApplication36/nbproject/private/
 /JavaApplication36/build/
+/DATA  Connection/JDBC5/nbproject/private/
+/DATA  Connection/JDBC5/build/
+/DATA  Connection/jdbc6/nbproject/private/
+/DATA  Connection/jdbc6/build/
+/DATA  Connection/jdbc7/nbproject/private/
+/DATA  Connection/jdbc7/build/
+/DATA  Connection/jdbc/nbproject/private/
+/DATA  Connection/jdbc/build/
+/DATA  Connection/dgdg/nbproject/private/
+/DATA  Connection/sss/nbproject/private/
+/DATA  Connection/sss/build/
