--- a/DATA  Connection/AutoCrateTable/nbproject/private/private.properties
+++ b/DATA  Connection/AutoCrateTable/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Sanaullah\\AppData\\Roaming\\NetBeans\\15\\build.properties
